# Exercises

./: .clang-format  CMakeLists.txt  README.md  main.cpp
luogu/: CF545D.cpp  CF816B.cpp  CF9C .cpp  CMakeLists.txt  P1002.py  P1004.cpp  P1005.py  P1006.cpp  P1009.py  P1010.py  P1012.py  P1019.cpp  P1024.cpp  P1030.cpp  P1030.py  P1032.cpp  P1042.cpp  P1044.cpp  P1044_temp.cpp  P1048.cpp  P1065.cpp  P1067.cpp  P1080.py  P1098.cpp  P1101.cpp  P1102.cpp  P1104.py  P1106.py  P1111.cpp  P1115.cpp  P1160.cpp  P1162.cpp  P1163.cpp  P1164.py  P1165.cpp  P1182.cpp  P1216.cpp  P1219.cpp  P1223.py  P1226.cpp  (+58 more)
qiniu/: 3.cpp  AStar.cpp  AStar.h  CMakeLists.txt  _AStar.cpp
temp/: CMakeLists.txt  main.cpp  哈夫曼编码.cpp  城堡问题.cpp  电影节问题.cpp  背包问题的三个算法.cpp  踩方格.cpp  迷宫问题.cpp
template/: CMakeLists.txt  LCS.cpp  LIS.cpp  MCS.cpp  binary_search.cpp  lower_bound.cpp  nth_element.cpp  string_convert.cpp
tools/: save_ac_record.py
tools/records/: AT2412.cpp  AT3850.cpp  CF501B.py  CF816B.cpp  CF950B.cpp  CF9C.cpp  P1000.cpp  P1002.py  P1003.cpp  P1008.cpp  P1009.py  P1010.py  P1018.py  P1019.cpp  P1024.cpp  P1028.cpp  P1032.cpp  P1035.cpp  P1036.cpp  P1042.cpp  P1048.cpp  P1051.cpp  P1059.go  P1068.go  P1080.py  P1085.cpp  P1089.cpp  P1090.cpp  P1093.cpp  P1094.py  P1098.cpp  P1101.cpp  P1102.cpp  P1115.cpp  P1135.cpp  P1141.cpp  P1149.cpp  P1162.cpp  P1163.cpp  P1164.py  (+116 more)
